--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<div :style="[darkModeStyles,base]">
+		<div :style="[darkModeSet ? darkModeStyles : '',base]">
 			<header>
 				<h1>{{name}}</h1>
 				<nav>
@@ -23,12 +23,12 @@
 			</header>
 			<main>
 				<div class="blog_wrapper">
+					<button @click="toggleMode">{{darkModeSet ? '&#9788':'&#9789'}}</button>
 					<!-- BLOG SECTION -->
 					<section id="blog">
 						<article v-for="blog in blogs" :key="blog.id">
 							<h3>{{blog.title}}</h3>
-							<p>
-								{{blog.body}}
+							<p v-html="blog.body">
 							</p>
 							<p class="read_more">Read More</p>
 						</article>
