--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,26 +14,18 @@
 	<body>
 		<div :style="[darkModeSet ? darkModeStyles : '',base]">
 			<header>
-				<h1>{{name}}</h1>
-				<nav>
-					<ul>
-						<li  v-for="link in links"><a :href="link.url" :key="link.id">{{link.name}}</a></li>				
-					</ul>
-				</nav>
+				<app-header></app-header>
 			</header>
+			
 			<main>
 				<div class="blog_wrapper">
 					<button @click="toggleMode">{{darkModeSet ? '&#9788':'&#9789'}}</button>
 					<!-- BLOG SECTION -->
 					<section id="blog">
-						<article v-for="blog in blogs" :key="blog.id">
-							<h3>{{blog.title}}</h3>
-							<p v-html="blog.body">
-							</p>
-							<p class="read_more">Read More</p>
-						</article>
+						<blog-post></blog-post>
 					</section>
 				</div>
+				
 			</main>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.30/vue.global.prod.js"></script>
