--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
 					<button @click="toggleMode">{{darkModeSet ? '&#9788':'&#9789'}}</button>
 					<!-- BLOG SECTION -->
 					<section id="blog">
-						<blog-post v-for="blog in blogs" :key="blog.id" :title="blog.title" :body="blog.body"></blog-post>
+						<blog-post v-for="blog in blogs" :key="blog.id" :blog="blog"></blog-post>
 					</section>
 				</div>
 				
